feat: add VolunteerMinistry model